# collision_object_manager

./: .gitignore  CMakeLists.txt  package.xml
config/: config.yaml
include/collision_object_manager/: collision_object  collision_object.cpp  collision_object.hpp  collision_object_manager.hpp  custom_data_objects.hpp  human_skeleton.hpp  mock_gripper.hpp  moveit_pose_interface.hpp  ros_timer.hpp  skeleton_types.hpp
launch/: collision_object_manager_launch.py  collision_object_test.launch.py  mock_gripper.launch.py  robot_description.py
scripts/: annotation_utility.py  zed_driver_simple.py  zed_ros_driver.py
src/: collision_object.cpp  collision_object_manager.cpp  human_skeleton.cpp  main.cpp  mock_gripper.cpp  moveit_pose_interface.cpp  ros_timer.cpp
test/: collision_object_test.cpp  test_arm_collision_object.cpp  test_collision_object_class.cpp  test_human_skeleton.cpp  timer_test.cpp  timer_test_simple.cpp
